make codecov optional

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: app/coverage/lcov.info,ui/coverage/lcov.info
           flags: app,ui
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
   build:
     name: Build
